--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,11 @@
 {
     "env": {
-        "node": true
+        "node": true,
+        "es6": true
     },
     "parserOptions": {
-        "ecmaVersion": 2017
+        "ecmaVersion": 2017,
+        "sourceType": "module"
     },
     "rules": {
         "no-alert": 2,
