--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "luna": "./bin/luna.js"
   },
   "scripts": {
-    "pretest": "npm run lint && npm run test_browser",
-    "test_browser": "bin/luna.js test/test-luna.js -x",
-    "test": "bin/luna.js test -n",
+    "pretest": "npm run lint",
+    "test": "bin/luna.js test",
     "build": "rollup src/luna.js -e magic-string,progress,chalk -o bin/luna.js -f cjs --banner \"#!/usr/bin/env node\n/* Luna v$npm_package_version */\"",
     "lint": "eslint src",
     "preversion": "npm test",
@@ -31,12 +30,10 @@
     "escodegen": "^1.9.1",
     "eslint": "^4.19.1",
     "esprima": "^4.0.0",
-    "express": "^4.16.3",
     "istanbul-api": "^1.3.1",
     "istanbul-lib-coverage": "^1.2.0",
     "magic-string": "^0.24.0",
     "progress": "^2.0.0",
-    "puppeteer": "^1.4.0",
     "rollup": "^0.58.2",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-istanbul": "^2.0.1",
